--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,58 @@
+#home
+{
+  margin-bottom:0;
+  height:1743px;
+  padding:0;
+}
+
+#h1_b978_0
+{
+  padding-bottom:2%;
+}
+
+#a_b978_0
+{
+  text-decoration:none;
+  border-bottom:1px dotted #fff;
+  color:#fff;
+}
+
+#loadBannerVideoSpinner
+{
+  border-radius:4px;
+  display:none;
+  margin-top:20px;
+  background-color:rgba(0,0,0,0.498039);
+  padding:10px;
+}
+
+#div_b978_1
+{
+  position:absolute;
+  bottom:10px;
+  right:10px;
+  z-index:1000;
+}
+
+#p_b978_0
+{
+  margin-bottom:10px;
+  font-size:12px;
+}
+
+#div_b978_2
+{
+  position:absolute;
+  bottom:20px;
+  left:50%;
+  margin-left:-19px;
+}
+
+#a_b978_1
+{
+  text-decoration:none;
+}
+
 html,body
 {
   font-family:'Open Sans', sans-serif!important;
@@ -11,12 +66,24 @@ body
 h1
 {
   font-family:'Bungee Shade', cursive;
+  -webkit-animation-delay:1s;
+  animation-delay:1s;
 }
 
-h3,h4,h5
+h3,h4
 {
   font-family:Bungee, cursive;
   font-weight:700;
+  -webkit-animation-delay:2s;
+  animation-delay:2s;
+}
+
+h5
+{
+  font-family:Bungee, cursive;
+  font-weight:700;
+  -webkit-animation-delay:3s;
+  animation-delay:3s;
 }
 
 p
@@ -321,4 +388,11 @@ p
 .text-white,.share-button-banner:hover
 {
   color:#fff!important;
+}
+
+#div_b978_0,#img_b978_0
+{
+  width:980px;
+  margin-top:0;
+  height:1743px;
 }
